--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,13 +24,15 @@ jobs:
 
       - name: Set up Bun.sh
         uses: oven-sh/setup-bun@3d267786b128fe76c2f16a390aa2448b815359f3 # v2
+        
+        # Trusted publishing requires npm@11.5.1, but Github Actions uses npm@10.8.2
+      - name: Set up Node.js
+        uses: actions/setup-node@v6
+        with:
+          node-version: 24
 
       - name: Install dependencies
         run: bun install
-        
-        # Trusted publishing requires npm@11.5.1, but Github Actions uses npm@10.8.2
-      - name: Upgrade npm
-        run: npm install -g npm@latest
         
       - name: Run changesets
         uses: changesets/action@v1
