--- a/package.json
+++ b/package.json
@@ -39,9 +39,10 @@
 		"@biomejs/biome": "2.3.13",
 		"@changesets/changelog-github": "^0.5.2",
 		"@changesets/cli": "^2.29.8",
-		"@types/bun": "^1.3.6",
+		"@types/bun": "1.3.6",
 		"lefthook": "^2.0.15",
 		"publint": "^0.3.16",
 		"typescript": "^5.9.3"
-	}
+	},
+	"packageManager": "bun@1.3.6"
 }
