chore(renovate): add `security:minimumReleaseAgeNpm`

--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,7 @@
 	"extends": [
 		"config:recommended",
 		"helpers:pinGitHubActionDigests",
-		"customManagers:biomeVersions"
+		"customManagers:biomeVersions",
+		"security:minimumReleaseAgeNpm¶"
 	]
 }
