chore(renovate): group `bun` and `@types/bun`

--- a/renovate.json
+++ b/renovate.json
@@ -6,5 +6,11 @@
 		"customManagers:biomeVersions"
 	],
 	"minimumReleaseAge": "3 days",
-	"prCreation": "not-pending"
+	"prCreation": "not-pending",
+	"packageRules": [
+		{
+			"groupName": "bun",
+			"matchDepNames": ["bun", "@types/bun"]
+		}
+	]
 }
