--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -7,26 +7,37 @@ on:
   pull_request:
     branches:
       - main
-      
+
 permissions:
   contents: read
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write # Required for Codecov OIDC
+
     steps:
       - name: Checkout code
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
 
       - name: Set up Bun.sh
         uses: oven-sh/setup-bun@3d267786b128fe76c2f16a390aa2448b815359f3 # v2
-        
+
       - name: Install dependencies
         run: bun install
 
-      - name: Run tests
-        run: bun test
-        
+      - name: Run tests with coverage
+        run: bun test --coverage --coverage-reporter=lcov
+
+      - name: Upload to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          use_oidc: true
+          disable_search: true
+          files: ./coverage/lcov.info
+          fail_ci_if_error: true
+
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -38,7 +49,7 @@ jobs:
 
       - name: Install dependencies
         run: bun install
-        
+
       - name: Build the library
         run: bun run build
 
