ci: add `dependencies` label to PRs

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -6,6 +6,7 @@
 		"helpers:pinGithubActionDigestsToSemver",
 		"customManagers:biomeVersions"
 	],
+	"labels": ["dependencies"],
 	"packageRules": [
 		{
 			"groupName": "bun",
