--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,3 +1,7 @@
+ci:
+  - changed-files:
+      - any-glob-to-any-file: .github/**
+
 dependencies:
   - changed-files:
       - any-glob-to-any-file: bun.lock
