--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,6 @@
 {
 	"$schema": "https://unpkg.com/@changesets/config@3.1.2/schema.json",
-	"changelog": ["@changesets/changelog-github", { "repo": "jack-weilage/antithrow" }],
+	"changelog": ["@changesets/changelog-github", { "repo": "antithrow/antithrow" }],
 	"commit": false,
 	"access": "public",
 	"baseBranch": "main"
