--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ concurrency: ${{ github.workflow }}-${{ github.ref }}
 jobs:
   release:
     # Don't run on forks
-    if: github.repository == 'jack-weilage/antithrow'
+    if: github.repository == 'antithrow/antithrow'
     # TODO: Trusted publishing requires npm@11.5.1, but ubuntu-latest currently ships with
     # npm@10.8.2. ubuntu-slim is slightly newer, shipping with npm@11.6.2
     runs-on: ubuntu-slim
