--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -14,6 +14,10 @@ pkg:eslint-plugin:
   - changed-files:
       - any-glob-to-any-file: packages/eslint-plugin/**
 
+pkg:standard-schema:
+  - changed-files:
+      - any-glob-to-any-file: packages/standard-schema/**
+
 pkg:std:
   - changed-files:
       - any-glob-to-any-file: packages/std/**
