--- a/.editorconfig
+++ b/.editorconfig
@@ -12,7 +12,9 @@ trim_trailing_whitespace = true
 [*.yml]
 indent_size = 2
 indent_style = space
+tab_width = 2
 
 [*.md]
 indent_size = 2
 indent_style = space
+tab_width = 2
