--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -41,7 +41,7 @@
 	"devDependencies": {
 		"@typescript-eslint/parser": "8.54.0",
 		"@typescript-eslint/rule-tester": "8.54.0",
-		"antithrow": "workspace:*",
+		"antithrow": "workspace:^",
 		"eslint": "9.39.2",
 		"typescript": "5.9.3"
 	},
