chore: only update internal dependencies on minor/major updates

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -3,5 +3,6 @@
 	"changelog": ["@changesets/changelog-github", { "repo": "antithrow/antithrow" }],
 	"commit": false,
 	"access": "public",
-	"baseBranch": "main"
+	"baseBranch": "main",
+	"updateInternalDependencies": "minor"
 }
