--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -9,6 +9,7 @@ dependencies:
 documentation:
   - changed-files:
     - any-glob-to-any-file: '**/*.md'
+    - all-globs-to-all-files: '!.changeset/**'
 
 pkg:antithrow:
   - changed-files:
