--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -19,6 +19,10 @@ pkg:eslint-plugin:
   - changed-files:
     - any-glob-to-any-file: packages/eslint-plugin/**
 
+pkg:node:
+  - changed-files:
+    - any-glob-to-any-file: packages/node/**
+
 pkg:standard-schema:
   - changed-files:
     - any-glob-to-any-file: packages/standard-schema/**
