deps!: move `antithrow` from a `dependency` to a `peerDependency`

--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -47,7 +47,7 @@
 		"lint:publint": "publint",
 		"lint:types": "tsc --noEmit"
 	},
-	"dependencies": {
+	"peerDependencies": {
 		"antithrow": "workspace:^"
 	},
 	"devDependencies": {
