--- a/packages/standard-schema/package.json
+++ b/packages/standard-schema/package.json
@@ -45,7 +45,9 @@
 		"lint:types": "tsc --noEmit"
 	},
 	"dependencies": {
-		"@standard-schema/spec": "1.1.0",
+		"@standard-schema/spec": "1.1.0"
+	},
+	"peerDependencies": {
 		"antithrow": "workspace:^"
 	}
 }
