chore: ensure `antithrow` is built before other packages
Bun's `workspaces` flag works well to build dependencies in order, but `antithrow` is a peerDepenency, so Bun doesn't build it.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"packages/*"
 	],
 	"scripts": {
-		"build": "bun run --workspaces --if-present build",
+		"build": "bun run --filter antithrow build && bun run --filter '!antithrow' build",
 		"clean": "bun run --workspaces --if-present clean",
 		"lint": "biome check . && bun lint:knip && bun run --workspaces --if-present lint",
 		"lint:knip": "knip --cache",
